# rk3399-opencv-uvccamera-cpp-demo

./: CMakeLists.txt  README.md  opencamera.cpp
